    * mongoc_server_description_type
  * Exported symbols are no longer declared in seperate export files.
    This could break ABI with applications using clang, which previously
    exported symbols from the internal private ABI.
  * mongoc no longer crashes when multi roundtrip bulk operation fails.
  * Added support for the new readConcernLevel "linearizable".

Removed configure flags:
  * --enable-experimental has been removed and all of its features
    are always available now
  * --enable-hardening has been removed. The flag never actually enabled
    any hardening features and has therefore been removed

Thanks to everyone who contributed to the development of this release.

  * Everyone

Farewell,

    A. Jesse Jiryu Davis


mongo-c-driver 1.4.0
====================

It is my pleasure to announce the release of mongo-c-driver 1.4.0.

TLS
---

The driver can now use the native TLS and crypto functions included in Mac OS X
and Windows. OpenSSL is no longer required for TLS or authentication on Mac or
Windows. By default, OpenSSL is used if available, the default will switch in
version 2.0 to prefer native TLS.

For native TLS on Mac:

  ./configure --enable-ssl=darwin

For Windows:

  cmake "-DENABLE_SSL=WINDOWS" -G "Visual Studio 10 Win64" "-DCMAKE_INSTALL_PREFIX=C:\mongo-c-driver"

All of the TLS implementations now load the native default certificate store,
with OpenSSL on Windows falling back on the Windows native certificate store if
no other can be found.

The "ca_dir" field on mongoc_ssl_opt_t is only supported by OpenSSL. All other
fields, including "pem_file", are supported by all implementations.

A new field, "allow_invalid_hostname", has been added to mongoc_ssl_opt_t and is
preferred over the existing "allow_invalid_certificate" to disable hostname
verification.

The driver now supports the latest OpenSSL 1.1 in addition to past versions.

Application Performance Monitoring
----------------------------------
